# Spoken

./: CMakeLists.txt  README.md
core/: CMakeLists.txt  line.c  line.h
util/: CMakeLists.txt  CStr.cpp  CStr.h  FileStr.cpp  FileStr.h  StrSeg.cpp  StrSeg.h  stack.h
util/tests/: CMakeLists.txt  CStrTests.cpp  FileStrTests.cpp  StrSegTests.cpp
